2008-03-11	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems.adb, rtems.ads: Refactored rtems_clock_get into 5 methods
	which are single purpose and more strongly typed.  They are:
	    rtems_clock_get_tod - Get TOD in Classic API structure
	    rtems_clock_get_tod_timeval - Get TOD in struct timeval
	    rtems_clock_get_seconds_since_epoch - Get TOD as seconds since 1988
	    rtems_clock_get_ticks_since_boot - Get ticks since boot
	    rtems_clock_get_ticks_per_second - Get ticks per second
	Also switch from using 'Unchecked_Access to 'Access.
	Added pragma Convention C as required by gcc > 4.3.
	Changed style of parenthese on subprogram calls to match GNAT.

2008-02-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems.adb, rtems.ads: Correct binding to Object_Get_Name. Now works.

2008-02-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems.adb, rtems.ads: Object_Get_Name now has a proper implementation
	thanks to a binding tip from Laurent Guerby.

2008-02-01	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems.adb, rtems.ads: Add Ada binding for Object Services.

2007-12-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems.adb: Add missing semicolon.

2007-11-27	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* rtems.adb, rtems.ads: Fixed errors in the barrier binding.

2007-10-25	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* rtems.adb, rtems.ads: Added some more missing bindings.

2007-10-18	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* rtems.adb, rtems.ads: Added a missing binding.

2007-10-10	Glenn Humphrey <glenn.humphrey@OARcorp.com>

	* rtems.adb, rtems.ads: Cleaned up binding and removed bindings for
	things that are not reasonable to do in Ada.

2007-10-01	Joel Sherrill <joel.sherrill@OARcorp.com>

	* rtems.adb, rtems.ads: Most of single processor Ada tests now build.
	Some run.

2007-09-05	Joel Sherrill <joel.sherrill@oarcorp.com>

	* rtems.adb: Fix warnings.

2007-04-02	Jennifer Averett <jennifer.averrett@oarcorp.com>
